added favicon & title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Money, Baby!</title>
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <a href="#">danial habib</a>
+        <div>
+          <select>
+            <option>Product</option>
+          </select>
+          <select>
+            <option>Template</option>
+          </select>
+          <a href="#">Blog</a>
+          <a href="#">Pricing</a>
+        </div>
+        <div>
+          <a href="#">Sign In</a>
+          <button>Start Free</button>
+        </div>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
