WiP: nav & header

--- a/index.html
+++ b/index.html
@@ -8,26 +8,68 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#">danial habib</a>
-        <div>
-          <select>
-            <option>Product</option>
-          </select>
-          <select>
-            <option>Template</option>
-          </select>
-          <a href="#">Blog</a>
-          <a href="#">Pricing</a>
-        </div>
-        <div>
-          <a href="#">Sign In</a>
-          <button>Start Free</button>
-        </div>
-      </nav>
-    </header>
-    <main></main>
-    <footer></footer>
+    <div class="wrapper">
+      <header>
+        <nav>
+          <h3><a href="#">danial habib</a></h3>
+          <div>
+            <select>
+              <option>Product</option>
+            </select>
+            <select>
+              <option>Template</option>
+            </select>
+            <a href="#">Blog</a>
+            <a href="#">Pricing</a>
+          </div>
+          <div>
+            <a href="#">Sign In</a>
+            <div class="button">
+              <a href="#">Start Free</a>
+            </div>
+          </div>
+        </nav>
+        <section class="heading">
+          <div>
+            <div>
+              <h5>Product Growth Solution in Single Platform.</h5>
+              <h2>Managing business payments has never been easier</h2>
+              <p>
+                Never at water me might. On formed merits hunted unable merely
+                by mr whence or. Possession the unpleasing simplicity her
+                uncommonly.
+              </p>
+              <div class="button">
+                <a href="#">Try for free</a>
+              </div>
+            </div>
+            <div class="heading-grid">
+              <section>
+                <h4>195k+ Users</h4>
+                <p>
+                  Delightful remarkably mr on announcing themselves entreaties
+                  favorable.
+                </p>
+              </section>
+              <section>
+                <h4>$400m+ Saved</h4>
+                <p>
+                  About to in so terms voice at. Equal an would is found seems
+                  of and concluded.
+                </p>
+              </section>
+            </div>
+          </div>
+          <figure>
+            <img
+              src="./assets/img/headerhand.png"
+              alt="Angela flexing the Money"
+            />
+          </figure>
+        </section>
+      </header>
+      <main></main>
+      <footer></footer>
+    </div>
   </body>
 </html>
